<resources>
    <string name="app_name">My ApplicationNew</string>
    <string name="loginPage">Inventory</string>
    <string name="User">UserName</string>
    <string name="id">Password</string>
    <string name="button">LogIn</string>
    <string name="user_name">User Name :</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="new_user_signup">New User ? SignUp</string>
    <string name="first_name">First Name</string>
</resources>