<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_name"
    android:textSize="25sp"
    android:textColor="@android:color/holo_orange_dark"
    android:id="@+id/name"
    android:layout_marginTop="60dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/security"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:text="@string/submit"
        android:background="#03A9F4"
        android:textColor="@color/black"
        android:id="@+id/enter"
        />



</LinearLayout>