<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#581CC1"
    android:orientation="vertical"
    tools:context=".MyApplication">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginPage"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp">
        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:hint="@string/password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white">

        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150sp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="350sp"
                android:layout_marginRight="40sp"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/new_user_signup"
                    android:textColor="#ACED60"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </EditText>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>